review build number 29.1(34)

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2250,4 +2250,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "سلسلة الصور";
 "best_scene_discover_card_body" = "اختر الأفضل من سلسلة الصور!";
 "print_discover_card_title" = "طباعة الحزمة";
-"print_discover_card_body" = "اطبع ما يصل إلى %@ من صورك كل شهر مع باقة طباعة وأرسلها مباشرةً إلى عنوانك مجاناً.";
+"print_discover_card_body" = "اطبع ما يصل إلى 5 من صورك كل شهر مع باقة طباعة وأرسلها مباشرةً إلى عنوانك مجاناً.";
