--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2238,4 +2238,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Fotoserien";
 "best_scene_discover_card_body" = "Wählen Sie das Beste aus einer Fotoserie aus!";
 "print_discover_card_title" = "Druck-Paket";
-"print_discover_card_body" = "Drucken Sie mit dem Druckpaket jeden Monat bis zu %@ Fotos und lassen Sie sie kostenlos an Ihre Adresse liefern.";
+"print_discover_card_body" = "Drucken Sie mit dem Druckpaket jeden Monat bis zu 5 Fotos und lassen Sie sie kostenlos an Ihre Adresse liefern.";
