--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2280,4 +2280,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Series de Fotos";
 "best_scene_discover_card_body" = "Elige lo mejor de una serie de fotos!";
 "print_discover_card_title" = "Paquete de Imprimir";
-"print_discover_card_body" = "Imprime hasta un %@ de tus fotos cada mes con un paquete de impresión y recíbelas gratis directamente en tu domicilio.";
+"print_discover_card_body" = "Imprime hasta un 5 de tus fotos cada mes con un paquete de impresión y recíbelas gratis directamente en tu domicilio.";
