--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2543,4 +2543,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Série de Photos";
 "best_scene_discover_card_body" = "Choisissez le meilleur d'une série de photos!";
 "print_discover_card_title" = "Pack d'impression";
-"print_discover_card_body" = "Imprimez jusqu'à %@ photos chaque mois avec le forfait d'impression et faites-les livrer gratuitement à votre adresse.";
+"print_discover_card_body" = "Imprimez jusqu'à 5 photos chaque mois avec le forfait d'impression et faites-les livrer gratuitement à votre adresse.";
