--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2238,4 +2238,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Serie de Fotografii";
 "best_scene_discover_card_body" = "Alegeți cea mai bună dintr-o serie de fotografii!";
 "print_discover_card_title" = "Pachet de Imprimare";
-"print_discover_card_body" = "Imprimați până la %@ din fotografiile dvs. în fiecare lună cu un pachet de imprimare și trimiteți-le gratuit direct la adresa dvs.";
+"print_discover_card_body" = "Imprimați până la 5 din fotografiile dvs. în fiecare lună cu un pachet de imprimare și trimiteți-le gratuit direct la adresa dvs.";
