--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2252,4 +2252,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Серия Фотографий";
 "best_scene_discover_card_body" = "Выберите лучшее из серии фотографий!";
 "print_discover_card_title" = "Пакет Печати";
-"print_discover_card_body" = "Печатайте до %@ фотографий каждый месяц с пакетом печати и получайте их бесплатно прямо на свой адрес.";
+"print_discover_card_body" = "Печатайте до 5 фотографий каждый месяц с пакетом печати и получайте их бесплатно прямо на свой адрес.";
