--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2281,4 +2281,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Seria e Fotografive";
 "best_scene_discover_card_body" = "Zgjidh më të mirën nga një seri fotografish!";
 "print_discover_card_title" = "Paketën e Printimit";
-"print_discover_card_body" = "Printoni deri në %@ fotografi çdo muaj me paketën tonë të printimit dhe dërgojini ato drejtpërdrejt në derën tuaj falas.";
+"print_discover_card_body" = "Printoni deri në 5 fotografi çdo muaj me paketën tonë të printimit dhe dërgojini ato drejtpërdrejt në derën tuaj falas.";
