--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2312,4 +2312,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Seri Fotoğraflar";
 "best_scene_discover_card_body" = "Seri fotoğraflarından en iyisini seç!";
 "print_discover_card_title" = "Baskı Paketi";
-"print_discover_card_body" = "Baskı paketi ile her ay en fazla %@ tane fotoğrafını bastır ve hemen ücretsiz adresine gelsin.";
+"print_discover_card_body" = "Baskı paketi ile her ay en fazla 5 tane fotoğrafını bastır ve hemen ücretsiz adresine gelsin.";
