--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2240,4 +2240,4 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_title" = "Серія Фотографій";
 "best_scene_discover_card_body" = "Виберіть найкраще із серії фотографій!";
 "print_discover_card_title" = "Пакет Друку";
-"print_discover_card_body" = "Друкуйте до %@ фотографій щомісяця з пакетом друку та отримуйте їх безкоштовно прямо на свою адресу.";
+"print_discover_card_body" = "Друкуйте до 5 фотографій щомісяця з пакетом друку та отримуйте їх безкоштовно прямо на свою адресу.";
