--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2278,7 +2278,15 @@ then {11,99 TRY/Month}*/
 "set_recoverymail_securityquestion_success" = "Email-i juaj i rikuperimit dhe pyetja e sigurisë janë krijuar.";
 "settings_set_password_apple_warning" = "Për të vendosur fjalëkalimin tuaj, duhet të identifikoheni në lifebox me llogarinë tuaj Apple.";
 "lifebox_resignup_warning" = "Ekziston tashmë një llogari për informacionin që keni futur. Nëse vazhdoni, numri GSM nga llogaria tjetër do të fshihet. Do të mund të hyni në llogarinë tuaj vetëm duke përdorur adresën tuaj të emailit dhe fjalëkalimin. Je i sigurt që dëshiron të vazhdosh?";
-"best_scene_discover_card_title" = "Seria e Fotografive";
+
+/*Fuzzy*/
+"best_scene_title" = "Seria e Fotografive";
 "best_scene_discover_card_body" = "Zgjidh më të mirën nga një seri fotografish!";
 "print_discover_card_title" = "Paketën e Printimit";
 "print_discover_card_body" = "Printoni deri në 5 fotografi çdo muaj me paketën tonë të printimit dhe dërgojini ato drejtpërdrejt në derën tuaj falas.";
+"can_not_sent_otp_sms" = "";
+"invalid_refenrence_code" = "";
+"delete_for_selected" = "";
+"keep_everything" = "";
+"delete_info" = "";
+"best_scene_discover_card_title" = "";
