--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2309,7 +2309,21 @@ then {11,99 TRY/Month}*/
 "set_recoverymail_securityquestion_success" = "Kurtarma mailiniz ve güvenlik sorunuz oluşturuldu.";
 "settings_set_password_apple_warning" = "Şifreni belirleyebilmek için öncelikle Apple Hesabın ile lifebox’a giriş yapmalısın.";
 "lifebox_resignup_warning" = "Girmiş oldugunuz bilgilere ait hesap bulunmaktadır. Devam etmeniz durumunda diğer hesaptan GSM numarası silinecektir. Hesabınıza sadece mail adresi ve şifreniz ile ulaşabileceksiniz. İşleme devam etmek istediğinize emin misiniz?";
-"best_scene_discover_card_title" = "Seri Fotoğraflar";
+
+/*Fuzzy*/
+"best_scene_title" = "Seri Fotoğraflar";
 "best_scene_discover_card_body" = "Seri fotoğraflarından en iyisini seç!";
 "print_discover_card_title" = "Baskı Paketi";
 "print_discover_card_body" = "Baskı paketi ile her ay en fazla 5 tane fotoğrafını bastır ve hemen ücretsiz adresine gelsin.";
+
+/*Fuzzy*/
+"can_not_sent_otp_sms" = "Şu anda doğrulama kodu için SMS gönderemiyoruz. Hesabına ait E-Posta ile işleme devam edebilirsin.";
+"invalid_refenrence_code" = "Referans kodu geçersizdir.";
+
+/*Fuzzy*/
+"delete_for_selected" = "Seçili Olanları Sil";
+
+/*Fuzzy*/
+"keep_everything" = "Tümünü Tut";
+"delete_info" = "Silmek istediğin fotoğrafları seç.";
+"best_scene_discover_card_title" = "";
