forgot my password otp screen remaining time and added new error keys

--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2224,14 +2224,17 @@ then {11,99 TRY/Month}*/
 "set_recovery_mail_success" = "აღდგენის ელ.ფოსტა შექმნილია";
 "set_recoverymail_securityquestion_success" = "აღდგენის ელ.ფოსტა და უსაფრთხოების შეკითხვა შექმნილია";
 "settings_set_password_apple_warning" = "პაროლის დასაყენებლად უნდა შეხვიდე lifebox-ში შენი Apple-ის ანგარიშით";
-"lifebox_resignup_warning" = "";
-"best_scene_title" = "";
-"best_scene_discover_card_body" = "";
+"lifebox_resignup_warning" = "შენს მიერ შეყვანილი ინფორმაციით ანგარიში უკვე არსებობს. თუ გააგრძელებ, მობილური ნომერი სხვა ანგარიშიდან წაიშლება. შენს ანგარიშზე წვდომა გექნება მხოლოდ ელ.ფოსტითა  და პაროლით. დარწმუნებული ხარ, რომ გსურს გაგრძელება ? ";
+"best_scene_title" = "ფოტოების სერია";
+"best_scene_discover_card_body" = "აირჩიე საუკეთესო ფოტოების სერიიდან!";
 "print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"print_discover_card_body" = "დაბეჭდე 5-მდე ფოტო ყოველთვიურად სპეციალური პაკეტით და მიიღეთ ისინი შენს მისამართზე უფასოდ.";
 "can_not_sent_otp_sms" = "";
 "invalid_refenrence_code" = "";
 "delete_for_selected" = "";
 "keep_everything" = "";
 "delete_info" = "";
-"best_scene_discover_card_title" = "";
+"best_scene_discover_card_title" = "ფოტოების სერია";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
