--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2311,3 +2311,6 @@ then {11,99 TRY/Month}*/
 "keep_everything" = "";
 "delete_info" = "";
 "best_scene_discover_card_title" = "Series Photos";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
