--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2551,4 +2551,7 @@ then {11,99 TRY/Month}*/
 "delete_for_selected" = "";
 "keep_everything" = "";
 "delete_info" = "";
-"best_scene_discover_card_title" = "";
+"best_scene_discover_card_title" = "Série de Photos";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
