--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2289,4 +2289,7 @@ then {11,99 TRY/Month}*/
 "delete_for_selected" = "";
 "keep_everything" = "";
 "delete_info" = "";
-"best_scene_discover_card_title" = "";
+"best_scene_discover_card_title" = "Seria e Fotografive";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
