--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2526,16 +2526,32 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "Libérez de l'espace sur votre appareil.";
 "recommended" = "Recommandé";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "Ne manquez pas l'occasion";
 "print_package_print_firm" = "Les photos seront imprimées par une imprimerie sous contrat.";
 "sync_in_progress_delete_is_not_allowed" = "La préparation de vos photos est en cours, vous ne pouvez pas les supprimer pour le moment. Veuillez réessayer plus tard.";
 "connected_devices" = "Connecter L'appareil";
 "scan_qr_code" = "Scanner le Code QR";
 "scan_qr_code_info" = "Scannez le code QR de l'appareil que vous souhaitez connecter.";
 "qr_code_try_again" = "Le scan du code QR a échoué. Veuillez réessayer.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"print" = "Imprimer";
+"photo_max_selection_title" = "Vous Avez Droit à %@ Photos";
+"photo_max_selection_body" = "Vous avez le droit d'envoyer un maximum de %@ photos pour impression.";
+"set_recovery_mail_success" = "Votre e-mail de récupération a été créé.";
+"set_recoverymail_securityquestion_success" = "Votre courriel de récupération et votre question secrète ont été créés.";
+"settings_set_password_apple_warning" = "Vous devez être connecté à lifebox avec un compte Apple pour définir un mot de passe.";
+"lifebox_resignup_warning" = "Il existe déjà un compte pour l'information que vous avez introduite. Si vous continuez, le numéro de GSM de l'autre compte sera supprimé. Vous ne pourrez accéder à votre compte qu'avec votre adresse e-mail et votre mot de passe. Etes-vous sûr de vouloir continuer?";
+
+/*Fuzzy*/
+"best_scene_title" = "Série de Photos";
+"best_scene_discover_card_body" = "Choisissez le meilleur d'une série de photos!";
+"print_discover_card_title" = "Pack d'impression";
+"print_discover_card_body" = "Imprimez jusqu'à 5 photos chaque mois avec le forfait d'impression et faites-les livrer gratuitement à votre adresse.";
+"can_not_sent_otp_sms" = "";
+"invalid_refenrence_code" = "";
+"delete_for_selected" = "";
+"keep_everything" = "";
+"delete_info" = "";
+"best_scene_discover_card_title" = "Série de Photos";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
