--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2263,16 +2263,32 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "Libera espacio de memoria en tu teléfono.";
 "recommended" = "Recomendado";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "No Pierdas la Oportunidad";
 "print_package_print_firm" = "Las fotos serán impresas por una imprenta contratada.";
 "sync_in_progress_delete_is_not_allowed" = "Tus fotos están siendo preparadas, no puedes borrarlas en este momento. Vuelva a intentarlo más tarde.";
 "connected_devices" = "Conectar Dispositivo";
 "scan_qr_code" = "Escanear Código QR";
 "scan_qr_code_info" = "Escanee el código QR del dispositivo que desea conectar.";
 "qr_code_try_again" = "Error al escanear el código QR. Por favor, inténtelo de nuevo.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"print" = "Printare";
+"photo_max_selection_title" = "Tienes Derecho a %@ Fotos";
+"photo_max_selection_body" = "Puede enviar un máximo de %@ fotos para imprimir.";
+"set_recovery_mail_success" = "Se ha creado tu correo electrónico de recuperación.";
+"set_recoverymail_securityquestion_success" = "Se han creado tu correo electrónico de recuperación y tu pregunta secreta.";
+"settings_set_password_apple_warning" = "Debes haber iniciado sesión en lifebox con una cuenta de Apple para establecer una contraseña.";
+"lifebox_resignup_warning" = "Ya existe una cuenta para la información que ha introducido. Si continúa, se eliminará el número GSM de la otra cuenta. Sólo podrá acceder a su cuenta con su dirección de correo electrónico y su contraseña. ¿Está seguro de que desea continuar?";
+
+/*Fuzzy*/
+"best_scene_title" = "Series de Fotos";
+"best_scene_discover_card_body" = "Elige lo mejor de una serie de fotos!";
+"print_discover_card_title" = "Paquete de Imprimir";
+"print_discover_card_body" = "Imprime hasta un 5 de tus fotos cada mes con un paquete de impresión y recíbelas gratis directamente en tu domicilio.";
+"can_not_sent_otp_sms" = "";
+"invalid_refenrence_code" = "";
+"delete_for_selected" = "";
+"keep_everything" = "";
+"delete_info" = "";
+"best_scene_discover_card_title" = "Series de Fotos";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
