--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -135,7 +135,7 @@
 "Wi-Fi" = "Wi-Fi";
 "Free up space" = "გაათავისუფლე ადგილი";
 "Your device memory is almost full" = "შენი მოწყობილობის მახსოვრობა თითქმის სავსეა";
-"There are some duplicated items both in your device and lifebox" = "მოდი შევამოწმოთ დუბლირებული პუნქტები როგორც შენს მოწყობილობაში, ასევე lifebox-ში!";
+"There are some duplicated items both in your device and lifebox" = "მოდი შევამოწმოთ დუბლირებული ფაილები როგორც შენს მოწყობილობაში, ასევე lifebox-ში!";
 "Operation is complete" = "ქმედება წარმატებულია";
 "Download is complete" = "გადმოწერა დასრულდა";
 "Deleting is complete" = "წაშლა დასრულდა";
@@ -228,7 +228,7 @@
 "Date modified" = "შეცვლის თარიღი";
 "Duration" = "ხანგრძლივობა";
 "File size" = "ფაილის ზომა";
-"Items" = "ნივთები";
+"Items" = "ფაილები";
 "Folder size" = "საქაღალდის ზომა";
 "File Info" = "ფაილის ინფო";
 "File Name" = "ფაილის სახელი";
@@ -1969,9 +1969,9 @@
 "security_popup_header" = "დააყენე აღდგენის მეილი ან უსაფრთხოების კითხვა";
 "save_to_my_billo" = "შეინახე My Billo-ში";
 "save_to_my_billo_download" = "გსურს ჩამოტვირთო billo - %@ - %@.zip ფაილი?";
-"on_boarding_btn_google_login" = "Google-ით სისტემაში შესვლა";
+"on_boarding_btn_google_login" = "გააგრძელე Google-ით";
 "on_boarding_or" = "ან ";
-"on_boarding_btn_apple_login" = "Apple-ით სისტემაში შესვლა";
+"on_boarding_btn_apple_login" = "გააგრძელე Apple-ით";
 "google_login_user_exists_body" = "ნაპოვნია არსებული რეგისტრირებული ანგარიში %@ ელ. ფოსტით, Google Login ID არსებულ lifebox ანგარიშთან დასაკავშირებლად ჯერ უნდა შეიყვანო lifebox-ის პაროლი.";
 "settings_googe_apple_connect" = "შესვლის ვარიანტები";
 "settings_googe" = "Google ID-ით სისტემაში შესვლა";
@@ -2211,16 +2211,30 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "გაათავისუფლე სივრცე შენს მოწყობილობაში.";
 "recommended" = "რეკომენდირებულია";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "არ გამოტოვო შესაძლებლობა";
 "print_package_print_firm" = "";
-"sync_in_progress_delete_is_not_allowed" = "";
-"connected_devices" = "";
-"scan_qr_code" = "";
-"scan_qr_code_info" = "შენი ფოტოები მზადდება, ამჯერად ვერ წაშლი. გთხოვთ, სცადო მოგვიანებით.";
+"sync_in_progress_delete_is_not_allowed" = "შენი ფოტოები მზადდება, რის გამოც ამ ეტაპზე ვერ წაშლი მათ. გთხოვ, სცადო მოგვიანებით.";
+"connected_devices" = "დააკავშირე მოწყობილობა";
+"scan_qr_code" = "QR კოდის სკანირება";
+"scan_qr_code_info" = "დაასკანირე QR კოდი იმ მოწყობილობაზე, რომლის დაკავშირებაც გსურს";
 "qr_code_try_again" = "QR კოდის დასკანირება ვერ მოხერხდა. გთხოვთ, სცადო მოგვიანებით.";
 "print" = "";
 "photo_max_selection_title" = "";
 "photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"set_recovery_mail_success" = "აღდგენის ელ.ფოსტა შექმნილია";
+"set_recoverymail_securityquestion_success" = "აღდგენის ელ.ფოსტა და უსაფრთხოების შეკითხვა შექმნილია";
+"settings_set_password_apple_warning" = "პაროლის დასაყენებლად უნდა შეხვიდე lifebox-ში შენი Apple-ის ანგარიშით";
+"lifebox_resignup_warning" = "შენს მიერ შეყვანილი ინფორმაციით ანგარიში უკვე არსებობს. თუ გააგრძელებ, მობილური ნომერი სხვა ანგარიშიდან წაიშლება. შენს ანგარიშზე წვდომა გექნება მხოლოდ ელ.ფოსტითა  და პაროლით. დარწმუნებული ხარ, რომ გსურს გაგრძელება ? ";
+"best_scene_title" = "ფოტოების სერია";
+"best_scene_discover_card_body" = "აირჩიე საუკეთესო ფოტოების სერიიდან!";
+"print_discover_card_title" = "";
+"print_discover_card_body" = "დაბეჭდე 5-მდე ფოტო ყოველთვიურად სპეციალური პაკეტით და მიიღეთ ისინი შენს მისამართზე უფასოდ.";
+"can_not_sent_otp_sms" = "";
+"invalid_refenrence_code" = "";
+"delete_for_selected" = "";
+"keep_everything" = "";
+"delete_info" = "";
+"best_scene_discover_card_title" = "ფოტოების სერია";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
