--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2235,16 +2235,32 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "Освободите место на вашем устройстве.";
 "recommended" = "Рекомендуемый";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "Не Упустите Возможность";
 "print_package_print_firm" = "Фотографии будут напечатаны в типографии, с которой был заключен договор.";
 "sync_in_progress_delete_is_not_allowed" = "Идёт подготовка ваших фотографий, вы не можете удалить их в данный момент. Пожалуйста, повторите попытку позже.";
 "connected_devices" = "Подключить Устройство";
 "scan_qr_code" = "Сканирование QR-кода";
 "scan_qr_code_info" = "Отсканируйте QR-код на устройстве, которое вы хотите подключить.";
 "qr_code_try_again" = "Сканирование QR-кода не удалось. Пожалуйста, попробуйте еще раз.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"print" = "Печать";
+"photo_max_selection_title" = "Вы Имеете Право на %@ Фотографий";
+"photo_max_selection_body" = "Вы можете отправить на печать не более %@ фотографий.";
+"set_recovery_mail_success" = "Ваша электронная почта для восстановления была создана.";
+"set_recoverymail_securityquestion_success" = "Ваша электронная почта для восстановления и секретный вопрос были созданы.";
+"settings_set_password_apple_warning" = "Чтобы установить пароль, необходимо войти в lifebox с помощью учетной записи Apple.";
+"lifebox_resignup_warning" = "Аккаунт для введенной вами информации уже существует. Если вы продолжите, номер GSM из другого аккаунта будет удален. Вы сможете получить доступ к своему аккаунту только с помощью адреса электронной почты и пароля. Вы уверены, что хотите продолжить?";
+
+/*Fuzzy*/
+"best_scene_title" = "Серия Фотографий";
+"best_scene_discover_card_body" = "Выберите лучшее из серии фотографий!";
+"print_discover_card_title" = "Пакет Печати";
+"print_discover_card_body" = "Печатайте до 5 фотографий каждый месяц с пакетом печати и получайте их бесплатно прямо на свой адрес.";
+"can_not_sent_otp_sms" = "";
+"invalid_refenrence_code" = "";
+"delete_for_selected" = "";
+"keep_everything" = "";
+"delete_info" = "";
+"best_scene_discover_card_title" = "Серия Фотографий";
+"forgot_my_password_info" = "";
+"best_photo" = "";
+"security_question_invalid" = "";
