--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2270,3 +2270,4 @@ then {11,99 TRY/Month}*/
 "draw_warning_body" = "";
 "draw_package_button" = "";
 "draw_already_join" = "";
+"draw_detail_header" = "";
