--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2563,3 +2563,4 @@ then {11,99 TRY/Month}*/
 "draw_warning_body" = "";
 "draw_package_button" = "";
 "draw_already_join" = "";
+"draw_detail_header" = "";
